[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "zodb-pgjsonb-thumborblobloader"
dynamic = ["version"]
description = "Thumbor image loader reading blobs from zodb-pgjsonb blob_state table"
readme = "README.md"
license = "ZPL-2.1"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Zope Public License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Framework :: ZODB",
]
dependencies = [
    "thumbor>=7.0",
    "psycopg[binary,pool]>=3.1",
]

[project.urls]
Homepage = "https://github.com/bluedynamics/zodb-pgjsonb-thumborblobloader"
Repository = "https://github.com/bluedynamics/zodb-pgjsonb-thumborblobloader"
Changelog = "https://github.com/bluedynamics/zodb-pgjsonb-thumborblobloader/blob/main/CHANGES.md"
Issues = "https://github.com/bluedynamics/zodb-pgjsonb-thumborblobloader/issues"

[project.optional-dependencies]
s3 = ["boto3>=1.26"]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]>=7.0",
    "pytest-asyncio",
    "moto[s3]>=4.0",
]

[tool.hatch.build.targets.sdist]
exclude = ["example/"]

[tool.hatch.build.targets.wheel]
packages = ["src/zodb_pgjsonb_thumborblobloader"]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
parallel = true
source = ["zodb_pgjsonb_thumborblobloader"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "T20",
    "UP",
    "W",
]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
]

[tool.ruff.lint.isort]
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
no-sections = true
order-by-type = false

[tool.ruff.lint.pycodestyle]
max-line-length = 120
max-doc-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]
